(Accordion, LandingJoinUs) fix collapsing header texts

--- a/app/components/elements/Accordion.scss
+++ b/app/components/elements/Accordion.scss
@@ -2,11 +2,22 @@
 	text-align: left;
 	.Accordion__item { margin-bottom: 50px; }
 	.Accordion__icon {
-		margin-right: 45px;
+		margin-left: 45px;
+		transform: translateY(-16%);
+	}
+	@media #{$small-only} {
+		.Accordion__icon {
+			margin-left: 5px;
+		}
 	}
 	.Accordion__content {
 		transition: visibility 0s, opacity 0.5s linear;
-		margin-left: 84px;
+		margin-top: 20px;
+		// margin-left: 84px;
+	}
+	@media #{$medium-up} {
+		.Accordion__icon { margin-left: 17px; }
+		.Accordion__content { margin-right: 20px; }
 	}
 	.Accordion__content_active {
 		visibility: visible;
